# RobotFace-Healthmate-App

./: .gitignore  AudioRecorder.cpp  AudioRecorder.h  CMakeLists.txt  CMakeLists_qml.txt  Main.qml  README.md  README_MAP_INTEGRATION.md  RobotFace-Healthmate-App.pro  RobotFace-Healthmate-App_en_AU.ts  StreamUploader.cpp  StreamUploader.h  asrServer.py  audiomanager.cpp  audiomanager.h  build.bat  build.sh  build_qml.bat  build_websocket.bat  main.cpp  main_qml.cpp  main_test.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  run.sh  server.py  signalingclient  signalingclient.cpp  simpleServer.py  tcpServer.py  test_publish.sh  tssServer.py  tss_server_dashboard.html  tsssocketbridge.cpp  websocketbridge.cpp  websocketbridge.h
assets/: sample1.txt  voice_base.txt
backend_consultant/: main.py
backend_consultant/module/: prompt.py  tts.py
backend_consultant/web_test_websocket/: main.py
backend_consultant/web_test_websocket/static/: test_websocket.html
components/: AudioManager.qml  ControlButton.qml  InputBox.qml  OptimizedVideoPlayer.qml  RobotEye.qml  WebSocketPanel.qml
forms/: Main.qml  resources.qrc  test_simple.qml
forms/components/: AudioControlPanel.qml  AudioManager.qml  TSSSocketPanel.qml  WebSocketPanel.qml  audioUi.qml
forms/pages/: CareStepsScreen.qml  MapScreen.qml  ResponseScreen.qml  RobotFaceScreen.qml  RobotFaceScreen.qml.broken  RobotFaceScreen.qml.original
include/: audiomanager.h  filehelper.h  mapimageprovider.h  ros2mapbridge.h  tsssocketbridge.h  websocketbridge.h
install/: local_setup.sh  setup.sh
install/robot_app/share/ament_index/resource_index/package_run_dependencies/: robot_app
install/robot_app/share/robot_app/: local_setup.sh  package.sh  package.xml
install/robot_app/share/robot_app/cmake/: robot_appConfig.cmake
install/robot_app/share/robot_app/launch/: integrated_map_system.launch.py
launch/: robot_face_app.launch.py
log/: latest_build
pages/: CareStepsScreen.qml  ImageScreen.qml  MapScreen.qml  ResponseScreen.qml  RobotFaceScreen.qml
src/: audiomanager.cpp  filehelper.cpp  main.cpp  mapimageprovider.cpp  ros2mapbridge.cpp  tsssocketbridge.cpp  websocketbridge.cpp
